--- a/Tareas/tarea-landing-page/assets/style.css
+++ b/Tareas/tarea-landing-page/assets/style.css
@@ -148,11 +148,69 @@ main .contacts-container{
 }
 
 /*products-container*/
-main .products-container{
-  width: 100%;
-  margin: 0;
+.products-container {
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
+.products-container h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
+.grid-productos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.product {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 1rem;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+}
+
+.product img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+
+.product h3 {
+  margin: 0.5rem 0;
+  font-size: 1.2rem;
+}
+
+.description {
+  font-size: 0.95rem;
+  color: #555;
+  margin-bottom: 0.8rem;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.price .original {
+  text-decoration: line-through;
+  color: #888;
+  margin-right: 0.5rem;
+}
+
+.price .descuento {
+  color: #e60000;
+}
+
+
+
+/*pie de pagina*/
 footer {
   text-align: center;
   padding: 1rem;
